described the .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
+# Create a application, click on "Bot" and Copy the Bot Token
+# https://discord.com/developers/applications/
 DISCORD_TOKEN=KJklasdfu8ojoisdfz89HJUizafudsi
-# The Channel ID must be entered
+
+# Channel ID over which to get the Status Updates
 DISCORD_CHANNEL=789798097989023845
+
+# Create a API Token with your Hetzner Account
+# https://docs.hetzner.cloud/#getting-started
 HETZNER_TOKEN=KLJNljhasldfjklJkfjkasdjjsfdahfjlk5423asdf
+
 # Counted in hours
 # If you want to update in quarter or half ours please write with point as comma e.g. 3.25 = 3 Hours 15 Minutes
 STATUS_UPDATE_INTERVAL=3
