added server metrics period; changed status update interval to minutes

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,8 @@
-# Create a application, click on "Bot" and Copy the Bot Token
-# https://discord.com/developers/applications/
-DISCORD_TOKEN=KJklasdfu8ojoisdfz89HJUizafudsi
-
-# Channel ID over which to get the Status Updates
-DISCORD_CHANNEL=789798097989023845
-
-# Create a API Token with your Hetzner Account
-# https://docs.hetzner.cloud/#getting-started
-HETZNER_TOKEN=KLJNljhasldfjklJkfjkasdjjsfdahfjlk5423asdf
-
-# Counted in hours
-# If you want to update in quarter or half ours please write with point as comma e.g. 3.25 = 3 Hours 15 Minutes
-STATUS_UPDATE_INTERVAL=3
+DISCORD_TOKEN=sdfasdfdkIOuhuasdzfhuIOHF123
+# The Channel ID must be entered
+DISCORD_CHANNEL=878919012842
+HETZNER_TOKEN=KLF90asduf90UF90asdfk90sdf
+# How often status updates will occure (in minutes)
+STATUS_UPDATE_INTERVAL=0.1
+# Period to get metrics (in minutes)
+SERVER_METRICS_PERIOD = 15
