added SERVER_METRICS_PERIOD; added language support for english and german; added Meme Mode; added Config Testing

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,11 @@ DISCORD_CHANNEL=878919012842
 HETZNER_TOKEN=KLF90asduf90UF90asdfk90sdf
 # How often status updates will occure (in minutes)
 STATUS_UPDATE_INTERVAL=0.1
-# Period to get metrics (in minutes)
+# Period to get metrics (in minutes, 0 equals never)
 SERVER_METRICS_PERIOD = 15
+# Language, currently are only german and english supported (de/en)
+LANGUAGE=de
+# If true you will get random memes on success status commands
+MEME_MODE=true
+# Only necessary when Meme Mode is activated (https://developers.giphy.com/dashboard/?create=true)
+GIPHY_API_KEY=asadf80asdfjkladsf
