updated .env.example (multiple projects hetzner api keys)

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,22 @@
-DISCORD_TOKEN=sdfasdfdkIOuhuasdzfhuIOHF123
+DISCORD_TOKEN=adsfJAKU486NIZopqwerD18276sfkpq8AJKSF
 # The Channel ID must be entered
-DISCORD_CHANNEL=878919012842
-HETZNER_TOKEN=KLF90asduf90UF90asdfk90sdf
+DISCORD_CHANNEL=454654164681468140
+# API keys for the Hetzner API
+# NOTE: If you have multiple projects and want to add more then one to this bot
+# just increment the numbers after the 'HETZNER_TOKEN_' string
+# e.g. for three projects you would just have:
+# HETZNER_TOKEN_1=...
+# HETZNER_TOKEN_2=...
+# HETZNER_TOKEN_3=...
+HETZNER_TOKEN_1=4dfs894asdfASFASD0asd8fn90asdf
+HETZNER_TOKEN_2=NUIOua90dsnfu09NU)=FPUsdaf
 # How often status updates will occure (in minutes)
-STATUS_UPDATE_INTERVAL=0.1
-# Period to get metrics (in minutes, 0 equals never)
-SERVER_METRICS_PERIOD = 15
+STATUS_UPDATE_INTERVAL=2.5
+# Time how long back to get metrics (minutes)
+SERVER_METRICS_PERIOD=15
 # Language, currently are only german and english supported (de/en)
-LANGUAGE=de
+LANGUAGE=en
 # If true you will get random memes on success status commands
 MEME_MODE=true
 # Only necessary when Meme Mode is activated (https://developers.giphy.com/dashboard/?create=true)
-GIPHY_API_KEY=asadf80asdfjkladsf
+GIPHY_API_KEY=AIoui213804uoiafd
