--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ HETZNER_TOKEN_1=4dfs894asdfASFASD0asd8fn90asdf
 HETZNER_TOKEN_2=NUIOua90dsnfu09NU)=FPUsdaf
 # How often status updates will occure (in minutes)
 STATUS_UPDATE_INTERVAL=2.5
+# Interval for getting metrics updates (in minutes, 0 = never)
+SERVER_METRICS_INTERVAL=0
 # Time how long back to get metrics (minutes)
 SERVER_METRICS_PERIOD=15
 # Language, currently are only german and english supported (de/en)
