--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@types/node": "^14.14.5",
         "@types/ws": "^7.2.9",
         "nodemon": "^2.0.6",
+        "ts-node": "^10.8.1",
         "typescript": "^4.2.2"
     }
 }
