--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,23 +10,15 @@
         "moduleResolution": "node",
         "sourceMap": true,
         "resolveJsonModule": true,
-        "strictNullChecks": false,
+        "strictNullChecks": true,
         "strict": true,
         "outDir": "dist",
         "rootDir": "src",
         "baseUrl": ".",
         "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*"
-            ]
+            "*": ["node_modules/*", "src/types/*"]
         }
     },
-    "include": [
-        "./src/**/*", "./src/index.ts"
-    ],
-    "typeRoots": [
-        "./node_modules/@types",
-        "./src/types"
-    ],
+    "include": ["./src/**/*", "./src/index.ts"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
 }
