--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "healthznerbot",
-    "version": "1.1.2",
+    "version": "2.0.0",
     "description": "A discord bot to get periodically updates of the health status of your hetzner cloud machines.",
-    "main": "index.js",
+    "main": "main.js",
     "scripts": {
         "start": "node .",
         "dev": "nodemon .",
@@ -28,8 +28,9 @@
     "homepage": "https://github.com/raphaelbernhart/healthznerbot#readme",
     "dependencies": {
         "axios": "^0.25.0",
-        "discord.js": "^13.0.0",
-        "dotenv": "^14.0.0",
+        "consola": "^2.15.3",
+        "discord.js": "14.8.0",
+        "dotenv": "^14.3.2",
         "hcloud-js": "^1.4.1"
     },
     "devDependencies": {
@@ -37,7 +38,7 @@
         "@types/node": "16.11.21",
         "@types/ws": "8.2.2",
         "nodemon": "2.0.15",
-        "ts-node": "^10.8.1",
+        "ts-node": "^10.9.1",
         "typescript": "4.5.5"
     }
 }
