--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@discordjs/rest": "^1.7.1",
         "axios": "^0.25.0",
         "consola": "^3.2.2",
+        "dayjs": "^1.11.9",
         "discord.js": "14.11.0",
         "dotenv": "^14.3.2",
         "hcloud-js": "^1.4.1"
