--- a/.github/workflows/Push-Image.yaml
+++ b/.github/workflows/Push-Image.yaml
@@ -43,24 +43,16 @@ jobs:
 
             - name: Build Docker Image
               id: build-image
-              run: docker build --tag ${{ secrets.DOCKER_IMAGE }}:${{ steps.package-version.outputs.current-version}} --label "runnumber=${GITHUB_RUN_ID}" .
+              run: docker build --tag ${{ github.repository_owner }}/${{ secrets.DOCKER_IMAGE }}:${{ steps.package-version.outputs.current-version}} --label "runnumber=${GITHUB_RUN_ID}" .
 
             - name: Log into registry
               run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
 
             - name: Push image
               run: |
-                  IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+                  # Push docker image (version)
+                  docker push ghcr.io/${{ github.repository_owner }}/${{ secrets.DOCKER_IMAGE }}:${{ steps.package-version.outputs.current-version}}
 
-                  # Change all uppercase to lowercase
-                  IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-                  # Strip git ref prefix from version
-                  VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-                  # Strip "v" prefix from tag name
-                  [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-                  # Use Docker `latest` tag convention
-                  [ "$VERSION" == "main" ] && VERSION=latest
-                  echo IMAGE_ID=$IMAGE_ID
-                  echo VERSION=$VERSION
-                  docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-                  docker push $IMAGE_ID:$VERSION
+                  # Tag and push docker latest image
+                  docker tag ghcr.io/${{ github.repository_owner }}/${{ secrets.DOCKER_IMAGE }}:${{ steps.package-version.outputs.current-version}} ghcr.io/${{ github.repository_owner }}/${{ secrets.DOCKER_IMAGE }}:latest
+                  docker push ghcr.io/${{ github.repository_owner }}/${{ secrets.DOCKER_IMAGE }}:latest
