--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "name": "healthznerbot",
-    "version": "2.0.3",
+    "version": "2.0.4",
     "description": "A discord bot to get periodically updates of the health status of your hetzner cloud machines.",
     "main": "main.js",
+    "engines": {
+        "node": ">=18.0.0 <19.0.0"
+    },
     "scripts": {
         "start": "node .",
         "dev": "nodemon .",
@@ -27,20 +30,19 @@
     },
     "homepage": "https://github.com/raphaelbernhart/healthznerbot#readme",
     "dependencies": {
-        "@discordjs/rest": "^1.7.1",
-        "axios": "^1.4.0",
+        "@discordjs/rest": "^2.2.0",
+        "axios": "^1.6.2",
         "consola": "^3.2.3",
-        "dayjs": "^1.11.9",
-        "discord.js": "14.11.0",
+        "dayjs": "^1.11.10",
+        "discord.js": "14.14.1",
         "dotenv": "^16.3.1",
         "hcloud-js": "^1.4.1"
     },
     "devDependencies": {
-        "@types/dotenv": "8.2.0",
-        "@types/node": "18.16.19",
-        "@types/ws": "8.5.5",
-        "nodemon": "3.0.0",
-        "ts-node": "^10.9.1",
-        "typescript": "5.1.6"
+        "@types/node": "18.19.0",
+        "@types/ws": "8.5.10",
+        "nodemon": "3.0.2",
+        "ts-node": "^10.9.2",
+        "typescript": "5.3.3"
     }
 }
